# fast-api-oidc

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  requirements.txt  setup.cfg
.github/workflows/: pip-deploy.yml
fast_api_jwt_middleware/: log_interceptor.py  middleware.py  wrapper.py
src/fast_api_jwt_middleware/: __init__.py  auth_middleware.py  logger_protocol_contract.py  middleware.py  multi_provider_auth_middleware.py  oidc_helper.py  oidc_providers.py  token_cache.py  token_cache_singleton.py  wrapper.py
src/fast_api_jwt_middleware/auth/: auth_middleware.py  multi_provider_auth_middleware.py
src/fast_api_jwt_middleware/cache/: cache_protocol_contract.py  token_cache_singleton.py
src/fast_api_oidc/utils/: wrapper.py
tests/: run_tests.py  test_auth_middleware.py  test_middleware.py  test_multi_provider_auth_middleware.py  test_oidc_helper.py  test_oidc_providers.py  test_token_cache.py  test_token_cache_singleton.py  test_wrapper.py
