    [build-system]
    requires = ["setuptools", "wheel"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "fast-api-auth-middleware"
    version = "0.1.0"
    description = "A simple authentication middleware for FastAPI applications"
    authors = [
        { name = "Your Name", email = "your.email@example.com" }
    ]
    license = { text = "MIT" }
    readme = "README.md"
    requires-python = ">=3.7"
    dependencies = [
        "fastapi",
        "pyjwt>=2.8.0",
        "cachetools",
        "requests",
    ]
    classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]