[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-api-jwt-middleware"
version = "0.1.0"
description = "A FastAPI middleware for JWT-based authentication with support for multiple providers."
readme = { file = "README.md", content-type = "text/markdown" } 
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "starlette",
    "cachetools",
    "requests",
    "pyjwt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: FastAPI",
]

[tool.setuptools.packages.find]
where = ["src"]
